--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
+        "spatie/laravel-stripe-webhooks": "^2.5",
         "stripe/stripe-php": "^7.75"
     },
     "require-dev": {
